syntax = "proto3";

package api.product.v1;

option go_package = "product/api/product/v1;v1";
option java_multiple_files = true;
option java_package = "api.product.v1";

import "google/api/annotations.proto";

service Product {
    rpc CreateProduct (CreateProductRequest) returns (CreateProductReply) {
        option (google.api.http) = {
            post: "/v1/product"
            body: "*"
        };
    }
    rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductReply) {
        option (google.api.http) = {
            put: "/v1/product/{id}"
            body: "*"
        };
    }
    rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductReply) {
        option (google.api.http) = {
            delete: "/v1/product/{id}"
        };
    }
    rpc GetProduct (GetProductRequest) returns (GetProductReply) {
        option (google.api.http) = {
            get: "/v1/product/{id}"
        };
    }
    rpc ListProduct (ListProductRequest) returns (ListProductReply) {
        option (google.api.http) = {
            get: "/v1/product/"
        };
    }
}

message ProductInfo {
    int64 id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    double price = 3;
}
message CreateProductReply {
    ProductInfo Product = 1;
}

message UpdateProductRequest {
    int64 id = 1;
    string description = 3;
    double price = 4;
}
message UpdateProductReply {
    ProductInfo Product = 1;
}

message DeleteProductRequest {
    int64 id = 1;
}
message DeleteProductReply {}

message GetProductRequest {
    int64 id = 1;
}
message GetProductReply {
    ProductInfo Product = 1;
}

message ListProductRequest {}
message ListProductReply {
    repeated ProductInfo results = 1;
}